tests/golden/type_errors/or_pattern_binding_set_mismatch.cd
enum Option { Some(number), None }
let value = Option.Some(1);
print match value {
  Option.Some(value) | Option.None => "some",
};
