tests/golden/type_errors/or_pattern_binding_set_mismatch.err
Type error at 4:22: OR pattern alternatives must bind the same names
    Option.Some(value) | Option.None => "some",
                       ^
